# puzzle

./: .gitignore  README.md  pyproject.toml
.github/workflows/: PyO3.yml  crate-publish.yml  nb-plugin-publish.yml  publish-crate-cli.yml  publish-crate-lib.yml  publish-nonebot.yml  publish-npm.yml  publish-puzzle-lib.yml  publish-pypi.yml  pypi-publish.yml  release-cli.yml  release.yml
bindings/node/: .gitignore  Cargo.toml  README.md  benchmark.mjs  index.d.ts  index.js  package.json  puzzle.mjs
bindings/node/__test__/: index.spec.mjs
bindings/node/npm/android-arm64/: README.md  package.json
bindings/node/npm/darwin-arm64/: README.md  package.json
bindings/node/npm/darwin-x64/: README.md  package.json
bindings/node/npm/linux-arm64-gnu/: README.md  package.json
bindings/node/npm/linux-x64-gnu/: README.md  package.json
bindings/node/npm/win32-arm64-msvc/: README.md  package.json
bindings/node/npm/win32-x64-msvc/: README.md  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
klotsk/: __init__.py  puzzle.sqlite
nb/: bot.py
nonebot-plugin-puzzle/: pyproject.toml
nonebot_plugin_puzzle/: __init__.py  klotsk.py
puzzle/: Cargo.toml  readme.md
puzzle-game/: Cargo.toml
puzzle-game/src/: main.rs  utils.rs
puzzle-lib/: Cargo.toml
puzzle-lib/src/: lib.rs
puzzle-py/: Cargo.toml  pyproject.toml
puzzle/src/: main.rs  puzzle.rs  utils.rs
