[package]
name = "puzzle-game"
version = "0.1.2"
edition = "2021"
authors = ["inintencunter <2911583893@qq.com>"]
include = [
    "readme.md",
    "src",
    "Cargo.toml",
]
description = "数字华容道 --命令行版"
homepage = "https://github.com/initialencounter/puzzle"
readme = "readme.md"
keywords = [
    "puzzle",
    "game",
    "puzzle-game",
]
license = "AGPL-3.0"
repository = "https://github.com/initialencounter/puzzle"

[dependencies]
log = "0.4.21"
device_query = "2.1.0"
crossterm = "0.27.0"
puzzle-lib = "0.1.0"

