[package]
name = "puzzle-game"
version = "0.2.0"
edition = "2021"
authors = ["inintencunter <2911583893@qq.com>"]
include = [
    "readme.md",
    "src",
    "Cargo.toml",
]
description = "数字华容道 --命令行版"
homepage = "https://github.com/initialencounter/puzzle"
readme = "readme.md"
keywords = [
    "puzzle",
    "game",
    "puzzle-game",
]
license = "AGPL-3.0"
repository = "https://github.com/initialencounter/puzzle"

[dependencies]
log = "0.4.22"
device_query = "2.1.0"
crossterm = "0.28.1"
puzzle-lib = "0.2.0"

