[package]
edition = "2021"
name = "initencounter_puzzle"
version = "0.0.0"
license = "AGPL-3.0"
[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-alpha.8", default-features = false, features = ["napi4"] }
napi-derive = "3.0.0-alpha.7"
puzzle-lib = { path = "../../puzzle-lib", version = "0.2.0" }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
